# RSE_good_practices

./: .coverage  .gitignore  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/workflows/: lint.yml  publish.yml  test.yml
src/bookstore/: __init__.py
src/bookstore/exceptions/: __init__.py  book_exceptions.py
src/bookstore/models/: __init__.py  book.py
src/bookstore/repositories/: __init__.py  book_repository.py
tests/: test_book.py
tests/resources/: dummy_books.csv
